templates: add a search bar

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,12 +10,19 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/"><strong>Sportdropin</strong></a></li>
+            <li>
+                <a href="/"> <strong>SPORTDROPINS</strong></a>
+            </li>
         </ul>
         <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#" role="button">Button</a></li>
+            <li>
+                <form class="grid" action="/">
+                    <span class="grid">
+                        <input type="text" name="search" id="search" placeholder="Search">
+                        <button type="submit">Search</button>
+                    </span>
+                </form>
+
         </ul>
     </nav>
     <main class="container">
