--- a/templates/pages/group-hx-list.html
+++ b/templates/pages/group-hx-list.html
@@ -1,4 +1,4 @@
-{{ range .Data }}
+{{ range .data.Data }}
 <article>
     <header>
         <div><a href="/group/{{.UUID}}">{{ .Name }}</a></div>
@@ -14,6 +14,8 @@
         </small>
     </footer>
 </article>
+{{ else }}
+    <p>No group found</p>
 {{ end }}
 
 <a href="/group/" role="button">Add a group</a>
