--- a/templates/pages/group-list.html
+++ b/templates/pages/group-list.html
@@ -1,23 +1,24 @@
 {{ template "base.html" .}}
 {{ define "title" }} Groups {{ end }}
 {{ define "content" }}
-{{ range .Data }}
-<article>
-    <header>
-        <div><a href="/group/{{.UUID}}">{{ .Name }}</a></div>
-    </header>
-    <div>
-        <p> {{ .Description }}</p>
-    </div>
-    <footer>
-        <small>
-            <span>{{ .Street }}</span>
-            <span>{{ .City }}</span>
-            <span>{{ .Country }}</span>
-        </small>
-    </footer>
-</article>
-{{ end }}
-
-<a href="/group/" role="button">Add a group</a>
+    {{ range .data.Data }}
+    <article>
+        <header>
+            <div><a href="/group/{{.UUID}}">{{ .Name }}</a></div>
+        </header>
+        <div>
+            <p> {{ .Description }}</p>
+        </div>
+        <footer>
+            <small>
+                <span>{{ .Street }}</span>
+                <span>{{ .City }}</span>
+                <span>{{ .Country }}</span>
+            </small>
+        </footer>
+    </article>
+    {{ else }}
+    <p>No group found</p>
+    {{ end }}
+    <a href="/group/" role="button">Add a group</a>
 {{ end }}
