--- a/templates/pages/group-form.html
+++ b/templates/pages/group-form.html
@@ -1,48 +1,43 @@
-{{ template "base.html" .}}
-{{ define "title" }} Add group {{ end }}
+{{ template "content" . }}
+
+{{ define "hxmethod" }}{{ if .UUID }}hx-patch{{ else }}hx-post{{ end }}{{ end }}
+
+
+{{ define "title" }} 
+{{ if .UUID }} Edit group {{ else }} Add group {{ end }}
+{{ end }}
+
 
 {{ define "content" }}
-{{ $url := .url }}
-{{ with .data.Data }}
-<form method="post" action="/group/">
-    <label for="sport">Sport</label>
-    <input type="text" name="sport" id="sport" value="{{ .Sport }}">
-    <label for="name">Name</label>
-    <input type="text" name="name" id="name" value="{{ .Name }}">
-    <label for="description">Description</label>
-    <textarea name="description" id="description" cols="30" rows="10">{{ .Description }}</textarea>
-    <label for="street">Street</label>
-    <input type="text" name="street" id="street" value="{{ .Street }}">
-    <div class="grid">
-        <label for="city">City</label><input type="text" name="city" id="city" value="{{ .City }}">
-        <label for="country">Country</label><input type="text" name="country" id="country" value="{{ .Country }}">
-    </div>
-    <span class="grid">
-        <button type="submit" value="save" class="primary">Save</button>
-        <button type="submit" value="delete" class="secondary" data-target="delete-modal"
-            onClick="toggleModal(event)">Delete</button>
-    </span>
-    <!-- Modal -->
-    <dialog id="delete-modal">
+    {{ $hxreq := .IsHXRequest }}
+    {{ $url := .url }}
+    {{ with .data.Data }}
+    <dialog id="group-modal" open>
         <article>
-            <a href="#close" aria-label="Close" class="close" data-target="delete-modal" onClick="toggleModal(event)">
-            </a>
-            <h3>Confirm your action!</h3>
-            <p>Do you really want to delete this group ?</p>
-            <footer>
-                <a href="#cancel" role="button" class="secondary" data-target="delete-modal"
-                    onClick="toggleModal(event)">
-                    Cancel
-                </a>
-                <a href="{{ $url }}" role="button" data-target="delete-modal" onClick="redirect(event)">
-                    Confirm
-                </a>
-            </footer>
+            <header>
+                <a href="#close" aria-label="Close" class="close" data-target="group-modal" hx-get="#" hx-target="#group-modal" hx-swap="delete"></a>
+                {{ template "title" . }}
+            </header>
+            <form method="post" id="group-form">
+                <label>Sport</label>
+                <input type="text" name="sport" id="sport" value="{{ .Sport }}">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" value="{{ .Name }}">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" cols="30" rows="10">{{ .Description }}</textarea>
+                <label for="street">Street</label>
+                <input type="text" name="street" id="street" value="{{ .Street }}">
+                <div class="grid">
+                    <label for="city">City</label><input type="text" name="city" id="city" value="{{ .City }}">
+                    <label for="country">Country</label><input type="text" name="country" id="country" value="{{ .Country }}">
+                </div>
+                <span class="grid">
+                    <button type="submit" value="save" class="primary" {{ template "hxmethod" . }}="{{ $url }}" hx-target="#group-modal" hx-swap="delete">Save</button>
+                    <button type="reset" value="reset" class="contrast" data-target="group-modal" hx-get="#" hx-target="#group-modal" hx-swap="delete">Cancel</button>
+                    <button type="submit" value="delete" class="secondary" hx-delete="{{ $url }}" hx-target="#group-modal" hx-swap="delete" hx-confirm="Do you really want to delete {{ .Name }}?">Delete</button>
+                </span>
+            </form>
         </article>
     </dialog>
-
-</form>
-
-
-{{ end }}
+    {{ end }}
 {{ end }}
