--- a/templates/pages/group-list.html
+++ b/templates/pages/group-list.html
@@ -1,24 +1,33 @@
-{{ template "base.html" .}}
+{{ if .IsHXRequest }}
+    {{ template "content" . }}
+{{ else }}
+    {{ template "base.html" .}}
+{{ end }}
+
 {{ define "title" }} Groups {{ end }}
+
 {{ define "content" }}
-    {{ range .data.Data }}
-    <article>
-        <header>
-            <div><a href="/group/{{.UUID}}">{{ .Name }}</a></div>
-        </header>
-        <div>
-            <p> {{ .Description }}</p>
-        </div>
-        <footer>
-            <small>
-                <span>{{ .Street }}</span>
-                <span>{{ .City }}</span>
-                <span>{{ .Country }}</span>
-            </small>
-        </footer>
-    </article>
-    {{ else }}
-    <p>No group found</p>
-    {{ end }}
-    <a href="/group/" role="button">Add a group</a>
+<div id="groups" hx-get="/" hx-trigger="groupChange from:body" hx-target="this">
+        {{ range .data.Data }}
+        <article>
+            <header>
+                {{ $url := print "/group/" .UUID }}
+                <div><a href="{{ $url }}" hx-get="{{ $url }}" hx-target="#groups" hx-swap="beforeend">{{ .Name }}</a></div>
+            </header>
+            <div>
+                <p> {{ .Description }}</p>
+            </div>
+            <footer>
+                <small>
+                    <span>{{ .Street }}</span>
+                    <span>{{ .City }}</span>
+                    <span>{{ .Country }}</span>
+                </small>
+            </footer>
+        </article>
+        {{ else }}
+        <p>No group found</p>
+        {{ end }}
+        <a href="/group/" hx-get="/group" hx-target="#groups" hx-swap="beforeend" role="button">Add a group</a>
+    </div>
 {{ end }}
