--- a/templates/layouts/styles.html
+++ b/templates/layouts/styles.html
@@ -1,3 +1,4 @@
 {{ define "styles" }}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css" />
+<link rel="stylesheet" href="/static/css/styles.css" type="text/css" media="screen" charset="utf-8">
 {{ end }}
