--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -16,13 +16,10 @@
         </ul>
         <ul>
             <li>
-                <form class="grid" hx-get="/" hx-trigger="click" hx-target="#container">
-                    <span class="grid">
-                        <input type="text" name="search" id="search" placeholder="Search">
-                        <button type="submit" >Search</button>
-                    </span>
+                <form role="search" hx-get="/" hx-trigger="click" hx-target="#container">
+                    <input type="search" name="search" id="search" placeholder="Search">
+                    <input type="submit" value="Search" />
                 </form>
-
         </ul>
     </nav>
     <main class="container" id="container">
