fix search issue

--- a/pkg/view/base/index.templ
+++ b/pkg/view/base/index.templ
@@ -24,7 +24,7 @@ templ Header() {
 			</ul>
 			<ul>
 				<li>
-					<form role="search" hx-get="/" hx-trigger="click" hx-target="#container">
+					<form role="search" hx-get="/group" hx-trigger="click" hx-target="#container">
 						<input type="search" name="search" id="search" placeholder="Search"/>
 						<input type="submit" value="Search"/>
 					</form>
