group: remove cancel button

--- a/group/group.templ
+++ b/group/group.templ
@@ -50,10 +50,10 @@ templ GroupFormView(r view.ViewData[Record], attr templ.Attributes) {
                 "value": "save", 
                 "class": "primary",
             })
-            @component.ButtonReset("Cancel", templ.Attributes{
+            /*@component.ButtonReset("Cancel", templ.Attributes{
                 "value": "cancel",
                 "class": "contrast",
-            })
+            })*/
             @component.ButtonSubmit("Delete", templ.Attributes{
                 "value": "delete",
                 "class": "secondary",
