--- a/pkg/view/base/index.templ
+++ b/pkg/view/base/index.templ
@@ -11,6 +11,7 @@ templ Head() {
 
 templ Styles() {
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 	<link rel="stylesheet" href="/static/css/styles.css" type="text/css" media="screen" charset="utf-8"/>
 }
 
@@ -19,7 +20,7 @@ templ Header() {
 		<nav>
 			<ul>
 				<li>
-					<h2><a href="/"><strong>SPORTDROPINS</strong></a></h2>
+					<h2><a href="/"><strong>SPORTIX</strong></a></h2>
 				</li>
 			</ul>
 			<ul>
@@ -36,7 +37,6 @@ templ Header() {
 }
 
 templ Scripts() {
-	<script src="/static/js/modal.js"></script>
 	<script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
 }
 
@@ -45,15 +45,17 @@ templ Footer() {
 }
 
 templ Body() {
-	<html lang="en">
+	<body>
 		@Header()
 		<main class="container" id="container" hx-trigger="load" hx-get="/group"></main>
 		@Scripts()
 		@Footer()
-	</html>
+	</body>
 }
 
 templ Index() {
+	<html lang="en">
 	@Head()
 	@Body()
+	</html>
 }
